# stm32_cmake_template

./: CMakeLists.txt  README.md
Core/Inc/: main.h
Core/Src/: main.c
